--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,18 @@
 
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
+        {% if site.position %}
+        {{ site.position }}
+        <br>
+        {% endif %}
+        {{ site.affiliation }}
+        {% if site.email %}
+        <br>
+        {{ site.email }}
+        <br>
+        <br>
+        {% endif %}
+
       </header>
       <section>
 
