--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,11 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header style="text-align:center;">
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <br>
         {% endif %}
 
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
